@@ -125,7 +125,9 @@ enum {
 	NO_HARM_FROM_CLIENT = 35,
 	ALWAYS_FLEE = 36,
 	FLEE_PERCENT = 37,
-	MAX_SPECIAL_ATTACK = 38
+	ALLOW_BENEFICIAL = 38,
+	DISABLE_MELEE = 39,
+	MAX_SPECIAL_ATTACK = 40
 	
 };
 
